--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -8,7 +8,7 @@
 	<string>bulanan</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdentifier</key>
+	<key>com.bulanan.iosapps</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
